# My-Private-SDK

./: .gitignore  CMakeLists.txt  README.md
cmake/: check-compiler.cmake  compiler.cmake  macro.cmake
module/core/: core.hpp  import.cmake
module/core/src/: define.hpp  function.hpp  logger.cpp  logger.hpp  time.cpp  time.hpp
module/util/: import.cmake
module/util/src/: threadPool.cpp  threadPool.hpp
sample/core/: CMakeLists.txt  main.cpp
sample/thread-pool/: CMakeLists.txt  main.cpp
